fix header z-index

--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@ body {
 }
 
 header {
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 nav {
